src/objects/Incidents_Management__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Temporary_Permanent_Monetary_Imp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary/Permanent Monetary Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Response_for_LT__c</fullName>
        <label>Area Response for</label>
        <picklist>
            <picklistValues>
                <fullName>IT Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Response_for_ST__c</fullName>
        <label>Area Response for</label>
        <picklist>
            <picklistValues>
                <fullName>IT Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Response_for__c</fullName>
        <label>Area Response for</label>
        <picklist>
            <picklistValues>
                <fullName>IT Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Implemented_LT__c</fullName>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implemented_ST__c</fullName>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directly_impact_Business_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directly impact Business Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Date__c</fullName>
        <label>Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diverted_Resource_Cost_LT__c</fullName>
        <label>Diverted Resource Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diverted_Resource_Cost_ST__c</fullName>
        <label>Diverted Resource Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Notification_Date__c</fullName>
        <label>Incident Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Involve_Suspicious_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Involve Suspicious Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Control_Fail_Weak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Control Fail/Weak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_term_Solution__c</fullName>
        <label>Long-term Solution</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Background_if_applicable__c</fullName>
        <label>Process/Background (if applicable)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remediation_Owner__c</fullName>
        <label>Remediation Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_Issue_in_Last_12_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Issue in Last 12 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOX_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOX Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_term_Solution__c</fullName>
        <label>Short-term Solution</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Incidents Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>